# fiona-photonic

./: CMakeLists.txt  readme.md
bridge/: register.h
bridge/spike/: engine.h
bridge/spike/photonic_cpp/: config.h  ideal_model.h  model_factory.h  mzi_noise_model.h  noise_components.h  pcm_noise_model.h  photonic_model.h
bridge/verilator/: engine.cc  engine.h
pyfunc/: ideal_numerical.py  photonic_models.py  test.py
pyfunc/tests/: test_photonic_models.py
pyfunc/utils/: formatting.py  parser.py
scripts/: build-cpp-mode.sh
test/spike/: main.cpp
test/verilator/: top.sv
